--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: monospace;
+  cursor: default;
 }
 
-#main {
+#main, #contents {
   width: 100%;
   height: 100vh;
 }
